# course-work

./: .gitignore  README.md
MqttBrokerService/: Cargo.toml  README.md
Pong/: Cargo.toml  README.md
Pong/src/: main.rs
Pong/src/ball/: ball_component.rs  ball_plugin.rs  mod.rs
Pong/src/camera/: camera_plugin.rs  mod.rs
Pong/src/game_controller/: game_controller_plugin.rs  mod.rs
Pong/src/paddle/: mod.rs  paddle_component.rs  paddle_plugin.rs
Pong/src/physical_interactions/: collision_evaluator.rs  collision_event.rs  mod.rs  physical_interactions_actor.rs  physical_interactions_plugin.rs
Pong/src/scoreboard/: mod.rs  scoreboard_plugin.rs  scoreboard_resource.rs  scoreboard_ui_component.rs
Pong/src/sound_player/: collision_sounds_resource.rs  mod.rs  sound_player_plugin.rs
RustLibs/helpers-for-bevy/: Cargo.toml
RustLibs/helpers-for-bevy/src/: entity_info_component.rs  lib.rs
RustLibs/mqtt-publisher/: Cargo.toml  README.md
RustLibs/mqtt-publisher/src/: async_mqtt_client.rs  broker_config.rs  broker_info.rs  lib.rs  publisher.rs  publisher_error.rs  publisher_qos.rs
RustLibs/verification-code-gen/: Cargo.toml  README.md
RustLibs/verification-code-gen/src/: lib.rs  verification_code_generator.rs
TicTacToe/client-apps/Tic-Tac-Toe-Bevy/: .gitignore  Cargo.toml  README.md
TicTacToe/client-apps/Tic-Tac-Toe-Bevy/src/: camera_plugin.rs  main.rs
TicTacToe/client-apps/Tic-Tac-Toe-Bevy/src/game_play/: info_panel_plugin.rs  local_game_play_plugin.rs  mod.rs  tile_components.rs  tiles_plugin.rs
TicTacToe/client-apps/Tic-Tac-Toe-Bevy/src/game_play_screen/: info_panel_plugin.rs  local_game_play_plugin.rs  mod.rs  tile_component.rs  tile_components.rs  tiles_plugin.rs
TicTacToe/client-apps/Tic-Tac-Toe-Bevy/src/invitation_screen/: invite_screen_plugin.rs  mod.rs
TicTacToe/client-apps/Tic-Tac-Toe-Bevy/src/shared/: api_helpers.rs  app_mode.rs  app_state.rs  app_state_resource.rs  game_info_receiver.rs  game_state_resource.rs  mod.rs
TicTacToe/client-apps/Tic-Tac-Toe-Bevy/src/shared/local_models/: local_game_piece.rs  local_game_state.rs  local_grid_position.rs  local_player_info.rs  local_player_status.rs  mod.rs
TicTacToe/client-apps/Tic-Tac-Toe-Bevy/src/shared/local_service_client/: helper_functions.rs  mod.rs  service_client.rs
TicTacToe/client-apps/Tic-Tac-Toe-Bevy/src/start_screen/: mod.rs  start_screen_plugin.rs
TicTacToe/client-sdks/tic-tac-toe-rust-client-sdk/: Cargo.toml  README.md
TicTacToe/client-sdks/tic-tac-toe-rust-client-sdk/.openapi-generator/: FILES
TicTacToe/client-sdks/tic-tac-toe-rust-client-sdk/docs/: AddPlayerParams.md  AutomaticPlayerSkillLevel.md  BoardPosition.md  EndGameParams.md  EndGamingSessionParams.md  EventPlaneConfig.md  EventPlaneTopicNames.md  GameCreationResponse.md  GameCreationResult.md  GameInfo.md  GameInfoResponse.md  GameMode.md  GamePiece.md  GameState.md  GameTurnInfo.md  GameTurnParams.md  GamingSessionCreationResponse.md  GamingSessionCreationResult.md  JoinSessionParams.md  NewGameParams.md  NewGamingSessionParams.md  NewSinglePlayerGameParams.md  NewTwoPlayerGameParams.md  PlayStatus.md  PlayerInfo.md  PlayersReadinessResponse.md  SkillLevel.md  TicTacToeApi.md  TurnResponse.md
TicTacToe/client-sdks/tic-tac-toe-rust-client-sdk/src/apis/: configuration.rs  mod.rs  tic_tac_toe_api.rs
TicTacToe/client-sdks/tic-tac-toe-rust-client-sdk/src/models/: add_player_params.rs  automatic_player_skill_level.rs  board_position.rs  end_game_params.rs  end_gaming_session_params.rs  event_plane_config.rs  event_plane_topic_names.rs  game_creation_response.rs  game_creation_result.rs  game_info.rs  game_info_response.rs  game_mode.rs  game_piece.rs  game_state.rs  game_turn_info.rs  game_turn_params.rs  gaming_session_creation_response.rs  gaming_session_creation_result.rs  join_session_params.rs  mod.rs  new_game_params.rs  new_gaming_session_params.rs  new_single_player_game_params.rs  new_two_player_game_params.rs  play_status.rs  player_info.rs  players_readiness_response.rs  skill_level.rs  turn_response.rs
TicTacToe/tic-tac-toe-service/: Cargo.toml  Dockerfile  README.md
TicTacToe/tic-tac-toe-service/readme-content/TicTacToeSequence.shapex/: 100.json  main.json
TicTacToe/tic-tac-toe-service/src/: api_gaming.rs  api_gaming_session.rs  api_health_and_docs.rs  auto_player.rs  errors.rs  game_board.rs  game_engine.rs  game_observer_trait.rs  game_session.rs  game_session_manager.rs  game_state.rs  game_trait.rs  game_updates_publisher.rs  games_manager.rs  gaming_session.rs  gaming_sessions_manager.rs  main.rs  models.rs  play_outcome.rs  play_status.rs  player_info.rs  tests.rs  tic_tac_toe_game.rs  verification_code_generator.rs
TicTacToe/tic-tac-toe-service/src/api/: api_games.rs  api_gaming.rs  api_gaming_session.rs  api_health_and_docs.rs  docs.rs  games.rs  gaming_session.rs  health.rs  mod.rs
TicTacToe/tic-tac-toe-service/src/gaming/: auto_player.rs  automatic_player.rs  board_position.rs  game_board.rs  game_observer_trait.rs  game_piece.rs  game_state.rs  game_state_helpers.rs  game_trait.rs  game_updates_publisher.rs  gaming_session.rs  gaming_session_observer_trait.rs  gaming_session_state_changes.rs  gaming_sessions_manager.rs  mod.rs  play_outcome.rs  play_status.rs  tic_tac_toe_game.rs
TicTacToe/tic-tac-toe-service/src/models/: automatic_player_skill_level.rs  board_position.rs  event_plane.rs  game_mode.rs  game_piece.rs  game_state.rs  mod.rs  models.rs  play_status.rs  player_info.rs  requests.rs  responses.rs
(+105 files in other folders)
