[package]
name = "tic-tac-toe-service"
version = "0.4.0"
edition = "2021"

description = "Tic-Tac-Toe Game Service"
authors = ["Joel Davis <JoelDavisEngineering@Gmail.com>"]
license = "GPL-3"

[dependencies]

# *** Rust Made Easy dependencies ***
mqtt-publisher-lib = { path = "../../RustLibs/mqtt-publisher" }
verification-code-gen = { path = "../../RustLibs/verification-code-gen" }

# *** Outside dependencies ***
actix-web = "4.5.1"
chrono = "0.4.37"
derive_more = { version = "1.0.0", features = ["full"] }
env_logger = "0.11.2"
log = "0.4.21"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.36" }
tokio = "1.40.0"
utoipa = { version = "4.0.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["actix-web"] }
uuid = { version = "1.7.0", features = ["v4"] }
validator = { version = "0.18.1", features = ["derive"] }
