[package]
name = "tic_tac_toe_rust_client_sdk"
version = "0.2.0"
authors = ["Support@RustMadeEasy.com"]
description = "Tic-Tac-Toe Game Service"
license = "GPL-3"
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "^2.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "blocking", "multipart"]
