[package]
name = "tic_tac_toe_rust_client_sdk"
version = "0.4.0"
authors = ["Info@RustMadeEasy.com"]
description = "Tic-Tac-Toe Game Service"
license = "GPL-3"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "blocking", "multipart"] }
